k8s/web2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
        - name: web2
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web2-content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: web2-content
          emptyDir: {}
