k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: NodePort
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      nodePort: 30432
