k8s/logviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logviewer-service
spec:
  type: NodePort
  selector:
    app: logviewer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30090
