k8s/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: ui
      port: 8025
      targetPort: 8025
