k8s/web1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1-service
spec:
  type: NodePort
  selector:
    app: web1
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
