k8s/web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2-service
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: web2
  ports:
    - port: 80
      targetPort: 80
